--- a/index.html
+++ b/index.html
@@ -9,20 +9,30 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
 
-    <title>Login with Google Account</title>
+    <title>Google Sign in</title>
   </head>
-  <body>
-    <h2 class="alert alert-primary">Sign in with Google</h2>
-    <!-- Sign in button -->
-    <div class="g-signin2" data-onsuccess="onSignIn"></div>
-    <div class="data">
-      <p>Name</p>
-      <p class="alert alert-success" id="name"></p>
-      <p>Profile Pict</p>
-      <img id="image" class="rounded-circle" width="100" height="100" />
-      <p>Email</p>
-      <p id="email"></p>
-      <button type="button" class="btn btn-dark" onclick="signOut();">Sign Out</button>
+  <body class="bg-dark">
+    <div class="wrapper bg-light" style="max-width: 500px; min-height: 100vh; display: flex; margin: auto; display: block">
+      <div class="spacing bg-warning" style="padding-top: 150px"></div>
+      <!-- Sign in button -->
+      <div class="g-signin2" data-onsuccess="onSignIn"></div>
+      <div class="data">
+        <div class="header bg-warning" style="padding-bottom: 30px">
+          <img id="image" class="rounded-circle" width="125" height="125" style="margin: auto; display: block" />
+        </div>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" style="margin-top: -20px">
+          <path fill="#FFC107" fill-opacity="1" d="M0,64L120,96C240,128,480,192,720,192C960,192,1200,128,1320,96L1440,64L1440,0L1320,0C1200,0,960,0,720,0C480,0,240,0,120,0L0,0Z"></path>
+        </svg>
+        <!-- About -->
+        <div class="container" style="width: 90%">
+          <p style="font-weight: 500; font-size: 23px">About</p>
+          <p style="color: #c4c4c4; margin-top: 30px; font-size: 17px">Full Name</p>
+          <p class="" id="name" style="margin-top: -15px; font-size: 17px">zdnpl</p>
+          <p style="color: #c4c4c4; font-size: 17px">Email Address</p>
+          <p id="email" style="margin-top: -15px; font-size: 17px">mzidanaufal.07@gmail.com</p>
+          <button type="button" class="btn btn-dark" onclick="signOut();" style="margin-top: 40px">Sign Out</button>
+        </div>
+      </div>
     </div>
     <style>
       .data {
