--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
   </head>
   <body class="bg-dark">
     <div class="wrapper bg-light" style="max-width: 500px; min-height: 100vh; display: flex; margin: auto; display: block">
-      <div class="spacing" style="padding-top: 100px; background-color: #ffc107"></div>
+      <div class="spacing" style="padding-top: 100px; background-color: #3385FD"></div>
       <!-- Sign in button -->
       <div class="g-signin2" data-onsuccess="onSignIn"></div>
       <div class="data">
-        <div class="header" style="padding-bottom: 30px; background-color: #ffc107">
+        <div class="header" style="padding-bottom: 30px; background-color: #3385FD">
           <img id="image" class="rounded-circle" width="125" height="125" style="margin: auto; display: block" />
         </div>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" style="margin-top: -20px">
