--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
         <div class="header" style="padding-bottom: 30px; background-color: #3385FD">
           <img id="image" class="rounded-circle" width="125" height="125" style="margin: auto; display: block" />
         </div>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" style="margin-top: -20px">
-          <path fill="#FFC107" fill-opacity="1" d="M0,64L120,96C240,128,480,192,720,192C960,192,1200,128,1320,96L1440,64L1440,0L1320,0C1200,0,960,0,720,0C480,0,240,0,120,0L0,0Z"></path>
-        </svg>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" style="margin-top: -20px"><path fill="#3385FD" fill-opacity="1" d="M0,64L120,106.7C240,149,480,235,720,234.7C960,235,1200,149,1320,106.7L1440,64L1440,0L1320,0C1200,0,960,0,720,0C480,0,240,0,120,0L0,0Z"></path></svg>
         <!-- About -->
         <div class="container" style="width: 90%">
           <p style="font-weight: 500; font-size: 23px">About</p>
